add spacing for csu imgs

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 							</header>
 							<div class="content">
 								<p><strong>Description:</strong> Despite having a large reservoir of biological knowledge, there are still many unknowns about how life works. Research like this publication uncover those mysteries so we can dig deeper into why things are the way they are. The intent of this research was to characterize the amino acid sequence of a specific protein involved in cell division, specifically the cellular machinery that attaches microtubule spindles to the chromosomes during metaphase and anaphase. In short, we found a specific region of the protein that was thought to recruit helper proteins(ska), did not actually have that effect. We also found this region has regulation factors, lastly we found the region that is responsible for ska recruitment. </p>
-								<div class="csu-research">
+								<div display="flex" justify-content="space-between" class="csu-research">
 									<img height="185px" src="images/FullCell.jpeg" alt="" />
 									<img height="185px" src="images/CytoskeletonCell.jpeg" alt="" />
 								</div>
