--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						</ul>
 					</header>
 					<div class="content">
-						<p>I would not have reached these accomplishments without the <strong>amazing mentors and teammeates</strong> I have had along the way - I would like to specifically mention Cera Nieto, Rob Wimbish, Emma Shay-Heuth, the Jimeno Lab, and the DeLuca Lab.</p>
+						<p>I would not have reached these accomplishments without the <strong>amazing mentors and teammates</strong> I have had along the way - I would like to specifically mention Cera Nieto, Rob Wimbish, Emma Shay-Heuth, the Jimeno Lab, and the DeLuca Lab.</p>
 						
 						<!-- Section -->
 						<section>
